移除绑定账号时更新用户的用户名和昵称的功能。

--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         }
     ],
     "support": {
-        "issues": "https://github.com/spookygames/flarum-ext-auth-keycloak/issues",
-        "source": "https://github.com/spookygames/flarum-ext-auth-keycloak"
+        "issues": "https://gitee.com/AEXDragon/flarum-ext-auth-keycloak/issues",
+        "source": "https://gitee.com/AEXDragon/flarum-ext-auth-keycloak"
     },
     "require": {
         "flarum/core": "^1.1",
